finiched the release-1.2.0